# ml-pos-classifier

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entypoint.py  pyproject.toml
app/: pos_api.py
app/monitoring/: json_monitor.py  monitoring.py
data/: Query_and_Validation_Data.csv  Training_Data.csv
experiments/: run_experiment.py
flowchart/: flowchart.txt
src/pos_classifier/: train.py
src/pos_classifier/config/: config.py  logging_config.py  params.yaml
src/pos_classifier/data/: data_loader.py  postprocessing.py  preprocessing.py
src/pos_classifier/model/: fasttext_wrapper.py  predict.py  train.py
tests/: test_data.py  test_model.py
