[tool.poetry]
name = "pos_classifier"
version = "0.1.0"
description = "ML pipeline for classifying POS data"
authors = ["Julita Sobiczewska"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
nltk = "^3.9.1"
fasttext = "^0.9.3"
numpy = "1.26.4"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
mlflow = "^2.21.3"
streamlit = "^1.44.1"
websockets = "^15.0.1"
streamlit-autorefresh = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
ruff = "^0.11.5"

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "D",  # pydocstyle
    "N",  # PEP8 names
    "I"   # isort
]
ignore = [
    "N999",
    "D104",
    "I001"
]

[tool.ruff]
exclude = [
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".log",
    "logs",
    "output",
    "mlruns",
    "mlartifacts",
    "experiment_models"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
